--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FlutterDB": "Server=localhost\\SQLEXPRESS;Database=FinalProjectSem4;User Id=sa;Password=123456;TrustServerCertificate=True;"
+    "FlutterDB": "Server=localhost\\SQLEXPRESS;Database=FinalProjectSem4;User Id=sa;Password=29051999;TrustServerCertificate=True;"
 
   }
 }
