--- a/AdminWeb/appsettings.json
+++ b/AdminWeb/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ApiSettings": {
+        "BaseUrl": "http://192.168.12.102:7245/api/"
     }
-  },
-  "AllowedHosts": "*"
 }
