fix: upload image

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -2,11 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FlutterDB": "Server=localhost;Database=FinalProjectSem4;User Id=sa;Password=1234$;TrustServerCertificate=True;"
+    "FlutterDB": "Server=localhost\\SQLEXPRESS;Database=FinalProjectSem4;User Id=sa;Password=29051998;TrustServerCertificate=True;MultipleActiveResultSets=True;Encrypt=False;"
   }
 }
