--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,13 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "FlutterDB": "Server=localhost\\SQLEXPRESS;Database=FinalProjectSem4;User Id=sa;Password=@Nguyenyen2k4;TrustServerCertificate=True;"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "FlutterDB": "Server=localhost\\SQLEXPRESS;Database=FinalProjectSem4;User Id=sa;Password=@Nguyenyen2k4;TrustServerCertificate=True;"
 
-  }
+    },
+    "Jwt": {
+        "Issuer": "FinalProject.API",
+        "Audience": "FinalProject.AdminWeb",
+        "Key": "super_secret_key_at_least_32_chars_long_2025",
+        "ExpiresMinutes": 120
+    }
 }
