--- a/AdminWeb/appsettings.json
+++ b/AdminWeb/appsettings.json
@@ -6,7 +6,12 @@
         }
     },
     "AllowedHosts": "*",
-    "ApiSettings": {
-        "BaseUrl": "http://192.168.12.102:7245/api/"
+    "Api": {
+        "Base": "http://localhost:7245/api/"
+    },
+    "Jwt": {
+        "Issuer": "FinalProject.API",
+        "Audience": "FinalProject.AdminWeb",
+        "Key": "super_secret_key_at_least_32_chars_long_2025"
     }
 }
