--- a/AdminWeb/appsettings.json
+++ b/AdminWeb/appsettings.json
@@ -6,9 +6,9 @@
         }
     },
     "AllowedHosts": "*",
-    "Api": {
-        "Base": "http://localhost:7245/api/"
-    },
+  "Api": {
+    "Base": "https://localhost:64767/api/"
+  },
     "Jwt": {
         "Issuer": "FinalProject.API",
         "Audience": "FinalProject.AdminWeb",
