--- a/AdminWeb/appsettings.json
+++ b/AdminWeb/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
   "Api": {
-    "Base": "https://localhost:64767/api/"
+    "Base": "http://localhost:7245/api/"
   },
     "Jwt": {
         "Issuer": "FinalProject.API",
