--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "FlutterDB": "Server=localhost;Database=FinalProjectSem4;User Id=sa;Password=@Nguyenyen2k4;TrustServerCertificate=True;"
+        "FlutterDB": "Server=localhost;Database=FinalProjectSem4;User Id=sa;Password=1234$;TrustServerCertificate=True;"
 
     },
     "Jwt": {
