feat: add api product newest

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,10 +6,10 @@
         }
     },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "FlutterDB": "Server=localhost;Database=FinalProjectSem4;User Id=sa;Password=1234$;TrustServerCertificate=True;"
+  "ConnectionStrings": {
+    "FlutterDB": "Server=localhost\\SQLEXPRESS;Database=FinalProjectSem4;User Id=sa;Password=29051998;TrustServerCertificate=True;MultipleActiveResultSets=True;Encrypt=False;"
 
-    },
+  },
     "Jwt": {
         "Issuer": "FinalProject.API",
         "Audience": "FinalProject.AdminWeb",
