--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -25,8 +25,9 @@
     "Command": "pay",
     "CurrCode": "VND",
     "Locale": "vn",
-    "PaymentBackReturnUrl": "http://localhost:7245/api/VnPay/callback"
-    //"PaymentBackReturnUrl": "http://192.168.1.32:7245/api/VnPay/callback"
+    //"PaymentBackReturnUrl": "http://localhost:7245/api/VnPay/callback"
+    //"PaymentBackReturnUrl": "http://172.16.0.151:7245/api/VnPay/callback"
+    "PaymentBackReturnUrl": "http://192.168.1.32:7245/api/VnPay/callback"
   }
 
 }
